# razor

./: .gitignore  CMakeLists.txt  LICENSE
include/: platform.h
src/: main.cpp  platform.cpp
